--- a/LINQToTTreeHelpers/LINQToTreeHelpers/LINQToTreeHelpers.csproj
+++ b/LINQToTTreeHelpers/LINQToTreeHelpers/LINQToTreeHelpers.csproj
@@ -121,6 +121,7 @@
     <Compile Include="FutureUtils\Operators.cs" />
     <Compile Include="PlotStyleSetup.cs" />
     <Compile Include="Plotting.cs" />
+    <Compile Include="PlottingUtils.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ROOTUtils.cs" />
     <Compile Include="SparseTables\SparseTable.cs" />
