Seperated out the Expression Resolution into two bits, one is the actual C++ translation, and the other is doing everything else (like parameter replacement).

--- a/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
+++ b/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
@@ -117,6 +117,7 @@
     <Compile Include="ExecutionCommon\LocalExecutor.cs" />
     <Compile Include="Expressions\ArrayExpressionParser.cs" />
     <Compile Include="Expressions\ArrayInfoVector.cs" />
+    <Compile Include="Expressions\ExpressionResolver.cs" />
     <Compile Include="Expressions\ExpressionStringConverter.cs" />
     <Compile Include="Expressions\ObjectPropertyExpressionVisitor.cs" />
     <Compile Include="Expressions\ParameterReplacementExpressionVisitor.cs" />
