Bit the bullet: - ROCount now returns an expression - Created DeclarableParameter - an Expression that has an initial value - Fixed up all tests and calls so that it works. - Many tests replaced with "throw notimplementedyet" - so lots of work   to do here.

--- a/LINQToTTree/LinqToTTreeInterfacesLib/LinqToTTreeInterfacesLib.csproj
+++ b/LINQToTTree/LinqToTTreeInterfacesLib/LinqToTTreeInterfacesLib.csproj
@@ -91,6 +91,7 @@
     <Compile Include="IBookingStatementBlock.cs" />
     <Compile Include="ICodeContext.cs" />
     <Compile Include="ICodeOptimizationService.cs" />
+    <Compile Include="IDeclaredParameter.cs" />
     <Compile Include="IExecutableCode.cs" />
     <Compile Include="IExpressionHolder.cs" />
     <Compile Include="IFutureValue.cs" />
