--- a/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
+++ b/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
@@ -57,34 +57,34 @@
     <CodeAnalysisFailOnMissingRules>false</CodeAnalysisFailOnMissingRules>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="libCoreWrapper">
+    <Reference Include="libCoreWrapper, Version=2.2.4255.4082, Culture=neutral, processorArchitecture=x86">
       <HintPath>..\packages\ROOTNET-Core-v5.30.01.win32.vc10.2.2\lib\net40\libCoreWrapper.dll</HintPath>
     </Reference>
-    <Reference Include="libGrafWrapper">
+    <Reference Include="libGrafWrapper, Version=2.2.4255.4170, Culture=neutral, processorArchitecture=x86">
       <HintPath>..\packages\ROOTNET-Tree-v5.30.01.win32.vc10.2.2\lib\net40\libGrafWrapper.dll</HintPath>
     </Reference>
-    <Reference Include="libHistWrapper">
+    <Reference Include="libHistWrapper, Version=2.2.4255.4144, Culture=neutral, processorArchitecture=x86">
       <HintPath>..\packages\ROOTNET-Core-v5.30.01.win32.vc10.2.2\lib\net40\libHistWrapper.dll</HintPath>
     </Reference>
-    <Reference Include="libMathCoreWrapper">
+    <Reference Include="libMathCoreWrapper, Version=2.2.4255.4092, Culture=neutral, processorArchitecture=x86">
       <HintPath>..\packages\ROOTNET-Core-v5.30.01.win32.vc10.2.2\lib\net40\libMathCoreWrapper.dll</HintPath>
     </Reference>
-    <Reference Include="libNetWrapper">
+    <Reference Include="libNetWrapper, Version=2.2.4255.4132, Culture=neutral, processorArchitecture=x86">
       <HintPath>..\packages\ROOTNET-Tree-v5.30.01.win32.vc10.2.2\lib\net40\libNetWrapper.dll</HintPath>
     </Reference>
-    <Reference Include="libPhysicsWrapper">
+    <Reference Include="libPhysicsWrapper, Version=2.2.4255.4095, Culture=neutral, processorArchitecture=x86">
       <HintPath>..\packages\ROOTNET-Core-v5.30.01.win32.vc10.2.2\lib\net40\libPhysicsWrapper.dll</HintPath>
     </Reference>
-    <Reference Include="libRIOWrapper">
+    <Reference Include="libRIOWrapper, Version=2.2.4255.4114, Culture=neutral, processorArchitecture=x86">
       <HintPath>..\packages\ROOTNET-Core-v5.30.01.win32.vc10.2.2\lib\net40\libRIOWrapper.dll</HintPath>
     </Reference>
-    <Reference Include="libThreadWrapper">
+    <Reference Include="libThreadWrapper, Version=2.2.4255.4098, Culture=neutral, processorArchitecture=x86">
       <HintPath>..\packages\ROOTNET-Core-v5.30.01.win32.vc10.2.2\lib\net40\libThreadWrapper.dll</HintPath>
     </Reference>
-    <Reference Include="libTreePlayerWrapper">
+    <Reference Include="libTreePlayerWrapper, Version=2.2.4255.4192, Culture=neutral, processorArchitecture=x86">
       <HintPath>..\packages\ROOTNET-Tree-v5.30.01.win32.vc10.2.2\lib\net40\libTreePlayerWrapper.dll</HintPath>
     </Reference>
-    <Reference Include="libTreeWrapper">
+    <Reference Include="libTreeWrapper, Version=2.2.4255.4181, Culture=neutral, processorArchitecture=x86">
       <HintPath>..\packages\ROOTNET-Tree-v5.30.01.win32.vc10.2.2\lib\net40\libTreeWrapper.dll</HintPath>
     </Reference>
     <Reference Include="LINQToTTreeLib.Moles, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL" />
@@ -116,7 +116,7 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
-    <Reference Include="WrapperPlumbingLibrary">
+    <Reference Include="WrapperPlumbingLibrary, Version=2.2.4255.3988, Culture=neutral, processorArchitecture=x86">
       <HintPath>..\packages\ROOTNET-Core-v5.30.01.win32.vc10.2.2\lib\net40\WrapperPlumbingLibrary.dll</HintPath>
     </Reference>
   </ItemGroup>
