--- a/LINQToTTree/Packages/repositories.config
+++ b/LINQToTTree/Packages/repositories.config
@@ -2,4 +2,5 @@
 <repositories>
   <repository path="..\LINQToTTreeLib\packages.config" />
   <repository path="..\LINQToTreeHelpers\packages.config" />
+  <repository path="..\LINQToTTreeLib.Tests\packages.config" />
 </repositories>
