--- a/LINQToTTree/TTreeClassGenerator.Tests/TTreeClassGenerator.Tests.csproj
+++ b/LINQToTTree/TTreeClassGenerator.Tests/TTreeClassGenerator.Tests.csproj
@@ -64,6 +64,7 @@
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
+    <Reference Include="TTreeClassGenerator.Moles, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL" />
   </ItemGroup>
   <ItemGroup>
     <CodeAnalysisDependentAssemblyPaths Condition=" '$(VS100COMNTOOLS)' != '' " Include="$(VS100COMNTOOLS)..\IDE\PrivateAssemblies">
