Refactor some of the tests to make utilities availible from the outside.

--- a/LINQToTTree/Packages/repositories.config
+++ b/LINQToTTree/Packages/repositories.config
@@ -3,4 +3,5 @@
   <repository path="..\LINQToTTreeLib\packages.config" />
   <repository path="..\LINQToTreeHelpers\packages.config" />
   <repository path="..\LINQToTTreeLib.Tests\packages.config" />
+  <repository path="..\LINQToTreeHelpers.Tests\packages.config" />
 </repositories>
