Updates to auto-nuget packages

--- a/LINQToTTree/LINQToTTreeLib.Tests/packages.config
+++ b/LINQToTTree/LINQToTTreeLib.Tests/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="NVelocity" version="1.0.3" />
   <package id="ROOTNET-Core-v5.30.01.win32.vc10" version="2.2" />
+  <package id="ROOTNET-PROOF-v5.30.01.win32.vc10" version="2.2" />
   <package id="ROOTNET-Tree-v5.30.01.win32.vc10" version="2.2" />
 </packages>
