--- a/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
+++ b/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
@@ -16,6 +16,8 @@
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <CodeContractsEnableRuntimeChecking>True</CodeContractsEnableRuntimeChecking>
     <CodeContractsRuntimeCheckingLevel>Full</CodeContractsRuntimeCheckingLevel>
+    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\LINQToTTree\</SolutionDir>
+    <RestorePackages>true</RestorePackages>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -65,7 +67,12 @@
     </Reference>
     <Reference Include="libHistWrapper, Version=2.2.4255.4144, Culture=neutral, processorArchitecture=x86">
       <HintPath>..\packages\ROOTNET-Core-v5.30.01.win32.vc10.2.2\lib\net40\libHistWrapper.dll</HintPath>
-    <Reference Include="libProofWrapper, Version=0.0.0.0, Culture=neutral, processorArchitecture=x86" />
+    </Reference>
+    <Reference Include="libProofDrawWrapper">
+      <HintPath>..\packages\ROOTNET-PROOF-v5.30.01.win32.vc10.2.2\lib\net40\libProofDrawWrapper.dll</HintPath>
+    </Reference>
+    <Reference Include="libProofPlayerWrapper">
+      <HintPath>..\packages\ROOTNET-PROOF-v5.30.01.win32.vc10.2.2\lib\net40\libProofPlayerWrapper.dll</HintPath>
     </Reference>
     <Reference Include="libMathCoreWrapper, Version=2.2.4255.4092, Culture=neutral, processorArchitecture=x86">
       <HintPath>..\packages\ROOTNET-Core-v5.30.01.win32.vc10.2.2\lib\net40\libMathCoreWrapper.dll</HintPath>
@@ -75,6 +82,12 @@
     </Reference>
     <Reference Include="libPhysicsWrapper, Version=2.2.4255.4095, Culture=neutral, processorArchitecture=x86">
       <HintPath>..\packages\ROOTNET-Core-v5.30.01.win32.vc10.2.2\lib\net40\libPhysicsWrapper.dll</HintPath>
+    </Reference>
+    <Reference Include="libProofWrapper">
+      <HintPath>..\packages\ROOTNET-PROOF-v5.30.01.win32.vc10.2.2\lib\net40\libProofWrapper.dll</HintPath>
+    </Reference>
+    <Reference Include="libProofxWrapper">
+      <HintPath>..\packages\ROOTNET-PROOF-v5.30.01.win32.vc10.2.2\lib\net40\libProofxWrapper.dll</HintPath>
     </Reference>
     <Reference Include="libRIOWrapper, Version=2.2.4255.4114, Culture=neutral, processorArchitecture=x86">
       <HintPath>..\packages\ROOTNET-Core-v5.30.01.win32.vc10.2.2\lib\net40\libRIOWrapper.dll</HintPath>
@@ -658,6 +671,7 @@
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
