Outline of a program that will auto-create the datasets in the proof server for testing.

--- a/LINQToTTree/Packages/repositories.config
+++ b/LINQToTTree/Packages/repositories.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
-  <repository path="..\LINQToTTreeLib\packages.config" />
+  <repository path="..\LINQToTreeHelpers.Tests\packages.config" />
   <repository path="..\LINQToTreeHelpers\packages.config" />
   <repository path="..\LINQToTTreeLib.Tests\packages.config" />
-  <repository path="..\LINQToTreeHelpers.Tests\packages.config" />
+  <repository path="..\LINQToTTreeLib\packages.config" />
+  <repository path="..\SetupPROOFServer\packages.config" />
 </repositories>
