--- a/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
+++ b/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
@@ -611,6 +611,8 @@
     <Compile Include="Statements\StatementCheckLoopPairwiseTest.cs" />
     <Compile Include="Statements\StatementAnyAllDetectorTest.cs" />
     <Compile Include="Statements\StatemenRecordValueTest.cs" />
+    <Compile Include="Expressions\t_DeclarableParameter.cs" />
+    <Compile Include="Utils\t_TypeUtils.cs" />
     <Compile Include="Utils\ExpressionUtilitiesTest.TestApply.g.cs">
       <DependentUpon>t_ExpressionUtilities.cs</DependentUpon>
     </Compile>
