A new statement that produces code looping over a set of paired indicies.

--- a/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
+++ b/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
@@ -133,6 +133,8 @@
     <Compile Include="QueryResultCache.cs" />
     <Compile Include="QueryVisitors\QueryVisitor.cs" />
     <Compile Include="QueryVisitors\FormattingQueryVisitor.cs" />
+    <Compile Include="QueryVisitors\StatementLoopOverSortedPairValue.cs" />
+    <Compile Include="Statements\StatementRecordPairValues.cs" />
     <Compile Include="relinq\AsQueriableExpressionNode.cs" />
     <Compile Include="relinq\AsQueriableResultOperator.cs" />
     <Compile Include="relinq\PairWiseAllExpressionNode.cs" />
