Lift the == and != object compare resolutions out of the Tranlsating expression resolver and put them in the main one. The reason to do this is to make sure that sub-expressions don't get resolved twice.

--- a/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
+++ b/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
@@ -611,6 +611,7 @@
     <Compile Include="Statements\StatementCheckLoopPairwiseTest.cs" />
     <Compile Include="Statements\StatementAnyAllDetectorTest.cs" />
     <Compile Include="Statements\StatemenRecordValueTest.cs" />
+    <Compile Include="Expressions\t_ExpressionResolver.cs" />
     <Compile Include="Utils\ExpressionUtilitiesTest.TestApply.g.cs">
       <DependentUpon>t_ExpressionUtilities.cs</DependentUpon>
     </Compile>
