--- a/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
+++ b/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
@@ -133,6 +133,8 @@
     <Compile Include="QueryResultCache.cs" />
     <Compile Include="QueryVisitors\QueryVisitor.cs" />
     <Compile Include="QueryVisitors\FormattingQueryVisitor.cs" />
+    <Compile Include="ResultOperators\IGrouping.cs" />
+    <Compile Include="ResultOperators\ROGroup.cs" />
     <Compile Include="Statements\StatementLoopOverSortedPairValue.cs" />
     <Compile Include="Statements\StatementRecordPairValues.cs" />
     <Compile Include="relinq\AsQueriableExpressionNode.cs" />
