--- a/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
+++ b/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
@@ -135,6 +135,7 @@
     <Compile Include="QueryVisitors\FormattingQueryVisitor.cs" />
     <Compile Include="ResultOperators\IGrouping.cs" />
     <Compile Include="ResultOperators\ROGroup.cs" />
+    <Compile Include="Statements\StatementLoopOverGroups.cs" />
     <Compile Include="Statements\StatementLoopOverSortedPairValue.cs" />
     <Compile Include="Statements\StatementRecordPairValues.cs" />
     <Compile Include="relinq\AsQueriableExpressionNode.cs" />
