--- a/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
+++ b/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
@@ -134,6 +134,7 @@
     <Compile Include="QueryVisitors\QueryVisitor.cs" />
     <Compile Include="QueryVisitors\FormattingQueryVisitor.cs" />
     <Compile Include="ResultOperators\ROGroup.cs" />
+    <Compile Include="Statements\StatementLoopOverGroupItems.cs" />
     <Compile Include="Statements\StatementLoopOverGroups.cs" />
     <Compile Include="Statements\StatementLoopOverSortedPairValue.cs" />
     <Compile Include="Statements\StatementRecordPairValues.cs" />
