Generate the attributes in the CSharp code for c-style arrays.

--- a/LINQToTTree/TTreeDataModel/TTreeDataModel.csproj
+++ b/LINQToTTree/TTreeDataModel/TTreeDataModel.csproj
@@ -65,6 +65,7 @@
     <Compile Include="ArrayGroup.cs" />
     <Compile Include="ClassForDictionary.cs" />
     <Compile Include="IClassItem.cs" />
+    <Compile Include="IClassItemExtraAttributes.cs" />
     <Compile Include="ItemCStyleArray.cs" />
     <Compile Include="ItemROOTClass.cs" />
     <Compile Include="ItemSimpleType.cs" />
