--- a/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
+++ b/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
@@ -174,6 +174,7 @@
     <Compile Include="Statements\StatementInlineBlock.cs" />
     <Compile Include="Statements\StatementSimpleStatement.cs" />
     <Compile Include="Expressions\TranslatingExpressionVisitor.cs" />
+    <Compile Include="Statements\StatementForLoop.cs" />
     <Compile Include="TraceHelpers.cs" />
     <Compile Include="TTreeQueryExecutor.cs" />
     <Compile Include="TypeHandlers\CPPCode\TypeHandlerCPPCode.cs" />
