Added a new attribute to deal with TClonesArray generated objects - so we can tell when we have such an object and (I hope) dereference it properly.

--- a/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
+++ b/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
@@ -109,6 +109,7 @@
     <Compile Include="CodeAttributes\CPPHelperClassAttribute.cs" />
     <Compile Include="CodeAttributes\IndexToOtherObjectArrayAttribute.cs" />
     <Compile Include="CodeAttributes\RenameVariableAttribute.cs" />
+    <Compile Include="CodeAttributes\TClonesArrayImpliedClassAttribute.cs" />
     <Compile Include="CodeAttributes\TranslateToClassAttribute.cs" />
     <Compile Include="CodeAttributes\TTreeVariableGroupingAttribute.cs" />
     <Compile Include="CodeContext.cs" />
