Get the case where the array isn't a TClonesArray, but, rather, is an implied object working.

--- a/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
+++ b/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
@@ -108,6 +108,7 @@
     <Compile Include="CodeAttributes\CPPCodeAttribute.cs" />
     <Compile Include="CodeAttributes\CPPHelperClassAttribute.cs" />
     <Compile Include="CodeAttributes\IndexToOtherObjectArrayAttribute.cs" />
+    <Compile Include="CodeAttributes\NotAPointerAttribute.cs" />
     <Compile Include="CodeAttributes\RenameVariableAttribute.cs" />
     <Compile Include="CodeAttributes\TClonesArrayImpliedClassAttribute.cs" />
     <Compile Include="CodeAttributes\TranslateToClassAttribute.cs" />
